--- a/src/components/Heading/heading.css
+++ b/src/components/Heading/heading.css
@@ -13,6 +13,7 @@
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1em;
   font-weight: bold;
+  margin: 0 6%;
 }
 
 @keyframes App-logo-spin {
