--- a/src/components/TouristInfoCards/touristInfoCards.css
+++ b/src/components/TouristInfoCards/touristInfoCards.css
@@ -3,11 +3,12 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  gap: 15px;
-  margin: 1% auto;
+  margin: 5% 0;
+  width: 100%;
 }
 .card {
-  width: 15rem;
+  width: 25rem;
+  margin: 2%;
 }
 
 .card-img-top {
