--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -2,7 +2,7 @@
   display: flex;
   gap: 10%;
   justify-content: center;
-  margin: 20% 2% 0 2%;
+  margin: 20% 2% 2%;
 }
 .footerUl li {
   list-style-type: none;
